SpongeGradle applies and buildscripts compile and dependencies are being created....
Signed-off-by: Gabriel Harris-Rouquette <gabizou@me.com>

--- a/testplugins/build.gradle
+++ b/testplugins/build.gradle
@@ -1,8 +1,11 @@
+plugins {
+    id("org.spongepowered.gradle.sponge.dev")
+}
+
 ext.api = parent.project('SpongeAPI')
-apply from: api.file('gradle/sponge.gradle')
 
 dependencies {
-    compile api
+    implementation api
 }
 
 license {
