--- a/gradle.properties
+++ b/gradle.properties
@@ -5,12 +5,9 @@ url=https://www.spongepowered.org
 organization=SpongePowered
 
 minecraftVersion=1.14.3
+minecraftDep=server
 mcpType=snapshot
 mcpMappings=20190830-1.14.3
 recommendedVersion=0-SNAPSHOT
 
-# We use VanillaGradle instead of an official ForgeGradle plugin.
-# Compared to the regular tweaker-server plugin, SpongeCommon has all run tasks disabled
-# and the Minecraft workspace defined as "provided" so they won't conflict with the implementation.
-forgeGradlePlugin=net.minecrell.vanillagradle.server
 org.gradle.jvmargs=-Xmx3G
